--- a/src/app/components/main/navigation/navigation.responsive.scss
+++ b/src/app/components/main/navigation/navigation.responsive.scss
@@ -1,54 +1,16 @@
-navigation {
-	position: relative;
-	display: flex;
-	overflow: hidden;
-	.navigation {
-		flex-flow: column;
-		padding-top: 30px;
-		z-index: 2;
-		width: 200px;
-		align-items: stretch;
-		.logo {
-			width: 120px;
-		}
-		.logo-min {
-			display: none;
-			width: 27px;
-		}
-		&.collapsed{
-			width: 50px;
-			.logo {
-				display: none;
-			}
-			.logo-min {
-				display: initial;
-			}
-		}
-		a {
-			padding: 20px 0px;
-		    color: white;
-		    display: flex;
-		    text-decoration: none;
-		    border-bottom: 1px solid rgba(255,255,255,0.1);
-		    .icon-active {
-		    	padding-left: 17px;
-		    	padding-right: 17px;
-		    	display: none;
-		    }
-		    .icon {
-		    	padding-left: 17px;
-		    	padding-right: 17px;		    	
-		    }
-		    &.active {
-		    	background: white;
-		    	color: #4f6379;
-		    	.icon-active {
-		    		display: initial;
-		    	}
-				.icon {
+@media (max-width: 600px) {
+	navigation {
+		.navigation {
+			&.collapsed{
+				width: 200px;
+				.logo {
+					width: 120px;
+					display: initial;
+				}
+				.logo-min {
 					display: none;
 				}
-		    }
+			}
 		}
 	}
 }
