--- a/src/app/components/main/toolbar/toolbar.responsive.scss
+++ b/src/app/components/main/toolbar/toolbar.responsive.scss
@@ -7,6 +7,7 @@
 		right: 0;
 		background-color: #fff;
 		.toolbar {
+			font-size: 16px;
 			&>.display-area {
 				img.left {
 					transform: rotate(180deg);
