--- a/src/app/components/main/blockchain/blockchain.html
+++ b/src/app/components/main/blockchain/blockchain.html
@@ -20,5 +20,15 @@
 				</div>
 			</div>
 		</div>
+		<div id="blockchain-{{block.number}}" class="mini-block-wrapper" ng-repeat="block in vm.currentBlocks" ng-if="$index >= (vm.currentBlocks.length - 7)">
+			<div class="block {{block.className}}" ng-mouseover="vm.fetchInfo(block.number)">
+				<div class="block-number">{{block.number}}</div>
+				<div class="mini-info" id="blockinfo-{{block.number}}">
+					<div style="display: inline-block;margin-right: 5px;" ng-if="block.timestamp">Date: {{block.timestamp}}</div>
+					<div style="display: inline-block;" ng-if="block.timestamp">Type: Invocation</div>
+					<img ng-if="!block.timestamp" style="width: 20px; height: 20px;" src="/assets/images/loading.gif" alt="">
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
