--- a/src/app/components/main/blockchain/blockchain.responsive.scss
+++ b/src/app/components/main/blockchain/blockchain.responsive.scss
@@ -15,9 +15,9 @@
 			.action {
 				border-radius: 100%;
 				left: auto;
-				right: 20px;
+				right: 6px;
 				line-height: 33px;
-				top: -50px;
+				top: -60px;
 			}
 		}
 		.top-bar {
@@ -43,160 +43,51 @@
 		}
 		.blocks {
 			padding-top: 10px;
-			padding-bottom: 10px;
-			overflow-x: hidden;
+			padding-bottom: 40px;
+			width: 100vw;
 			background-color: #fff;
 			.block-wrapper {
+				display: none;
+			}
+			.mini-block-wrapper {
 				display: inline-block;
 				position: relative;
 				transition: transform 0.5s, opacity 0.5s;
-				&::after{
-					content: ".....";
-					position: absolute;
-					top: 20px;
-					right: -18px;
-					opacity: 0.4;
-				}
-				&.ng-enter {
-					transform: translateX(700px);
-					opacity: 0;
-				}
-				&.ng-enter.ng-active {
-					transform: translateX(0px);
-					opacity: 1;
-				}
-				.info {
+				.mini-info {
 					position: fixed;
-					border-radius: 5px;
-					box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
-					background: #ffffff;
-					padding: 10px;
-					padding-top: 5px;
-					text-align: center;
-					width: 150px;
 					display: none;
-					color: rgba(70, 100, 121, 0.8);
-					z-index: 7;
-					font-size: 11px;
-					bottom: 84px;
-					&::after {
-						content: " ";
-						width: 0;
-						height: 0;
-						bottom: -7px;
-						border-left: 7px solid transparent;
-						border-right: 7px solid transparent;
-						border-top: 7px solid #f5f5f5;
-						position: absolute;
-						left: calc(50% - 7px);
-					}
+				    color: rgba(70, 100, 121, 0.8);
+				    z-index: 7;
+				    font-size: 16px;
+				    bottom: 5px;
+				    left: 10px;
+				    width: calc(100vw - 20px);
+				    border: 1px solid #e7ecf1;
+				    padding: 5px;
+				    text-align: center;
 				}
 				.block {
-					height: 60px;
+					height: 35px;
 					margin-left: 20px;
-					width: 60px;
+					width: 35px;
 					display: flex;
 					justify-content: center;
 					align-items: center;
 					cursor: pointer;
-					color: white;
+					color: #4f6379;
+					border: 1px solid #e7ecf1;
 					position: relative;
+					margin-top: 5px;
+					.block-number {
+						opacity: 0.4;
+					}
 					&:hover {
-						.info {
+						.mini-info {
 							display: block;
 						}
-						.block-top, .block-left, .block-right, .block-number {
-							transition: transform 0.75s;
-						}
-						.block-top {
-							transform: rotate(90deg) translateX(-5px);
-						}
-						.block-left {
-							transform: rotate(-30deg) translateX(-5px);
-						}
-						.block-right {
-							transform: rotate(210deg) translateX(-5px);
-						}
 						.block-number {
-							transform: translateY(-5px);
+							opacity: 1;
 						}
-					}
-
-					&.color-1 {
-						.block-top, .block-left, .block-right {
-							border-bottom-color: #40a3a8;
-							&:after {
-								border-top-color: #40a3a8;
-							}
-						}	
-					}
-					&.color-3 {
-						.block-top, .block-left, .block-right {
-							border-bottom-color: #f1c40f;
-							&:after {
-								border-top-color: #f1c40f;
-							}
-						}	
-					}
-					&.color-2 {
-						.block-top, .block-left, .block-right {
-							border-bottom-color: #297fb8;
-							&:after {
-								border-top-color: #297fb8;
-							}
-						}	
-					}
-					&.color-4 {
-						.block-top, .block-left, .block-right {
-							border-bottom-color: #e84c3d;
-							&:after {
-								border-top-color: #e84c3d;
-							}
-						}	
-					}
-					.block-top, .block-left, .block-right {
-						width: 0;
-						height: 0;
-						border: 12px solid transparent;
-						border-bottom: 21px solid #CAEAFF;
-						position: absolute;
-						&:after {
-							content: '';
-							position: absolute;
-							left: -12px;
-							top: 20px;
-							width: 0;
-							height: 0;
-							border: 12px solid transparent;
-							border-top: 20px solid #CAEAFF;
-						}
-					} 
-					.block-top {
-						transform: rotate(90deg);
-						top: 6px;
-						left: 35px;
-					}
-					.block-right {
-						transform: rotate(210deg);
-						top: 39px;
-						left: 22px;
-					}
-					.block-left {
-						transform: rotate(-30deg);
-						left: 0;
-						top: 11px;
-					}
-					.block-number {
-						color: white;
-						z-index: 1;
-						height: 16px;
-						width: 16px;
-						font-size: 10px;
-						line-height: 16px;
-						text-align: center;
-						position: absolute;
-						top: 13px;
-						left: 23px;
 					}
 				}
 			}
