--- a/src/app/components/main/blockchain/blockchain.scss
+++ b/src/app/components/main/blockchain/blockchain.scss
@@ -33,6 +33,9 @@
 		 padding-bottom: 10px;
 		 overflow-x: hidden;
 		 background-color: #fff;
+		.mini-block-wrapper {
+			display: none;
+		}
 		.block-wrapper {
 			display: inline-block;
 			position: relative;
