--- a/src/app/components/main/dashboard/dashboard.responsive.scss
+++ b/src/app/components/main/dashboard/dashboard.responsive.scss
@@ -196,7 +196,7 @@
     font-size: 16px;
     display: flex;
     flex-grow: 1;
-    max-height: calc(100vh - 120px);
+    max-height: 100vh;
     overflow: auto;    
     .left {
         display: flex;
