--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -39,36 +39,6 @@
             </div> 
         </div>
     </div>
-    <div class="right-stat" ng-if="!isBroker">
-        <img style="width:250px;height:100%;position: absolute; z-index: 1;" src="/assets/images/sidebar-background.png">
-        <div style="position:absolute;right:15px;left:10px;z-index: 2;">
-            <div><progress-display chart-id="brokerage-progress" is-vertical="true"/></div>
-             <div class="contact-brokerage">
-                <div style="position: relative;display: flex; flex-flow: column; margin-top: 15px;">
-                    <h2 style="color:white;">Brokerage Applications</h2>
-                    <input type="text" placeholder="Search" ng-model="vm.searchBrokerageApplications" type="search" ng-change="vm.changeBrokerageApplications()" > 
-                    <img src="/assets/images/search.png" alt="Search" style="position: absolute;right:2px;top:40px;">   
-                    <div style="display: flex;flex-flow: column;color:white;">
-                        <div style="display: flex;border: none;border-radius: 3px;padding: 20px;padding-left:0px;margin-bottom: 10px;" ng-repeat="item in vm.filteredContactedBrokers|limitTo:3">
-                            <img style="width: 70px; background:white; border-radius:3px;height:36px;margin-right: 15px; padding: 5px;" ng-src="/assets/images/partnerLogos/{{item.brokerageId}}.png" alt="">
-                            <div style="display: flex; flex-flow: column;">
-                                <div style="font-size: 14px;">{{item.brokerageId}}
-                                </div>
-                                <div  ng-if="item.status!='PENDING'" style="margin-top: 10px;font-size: 14px;line-height: 26px;background-color:#2ecc71;width: 90px;text-align: center;border-radius: 4px;">
-                                    {{item.status}}        
-                                </div>
-                                <div  ng-if="item.status=='PENDING'" class="confirm-btn" style="margin-top: 10px;font-size: 14px;line-height: 26px;background-color: #3498db;width: 90px;text-align: center;border-radius: 4px;">
-                                    {{item.status}}        
-                                </div>
-                            </div> 
-                            
-                        </div>
-                    </div>            
-                </div>
-            </div>
-            
-        </div>
-    </div>
     <div flex layout="column">
         <div ng-if="isBroker" id="userContactDetails">
             <md-select id="userSelector" ng-model="weapon" placeholder="{{firstAppointment}}" md-container-class="userSel" class="md-no-underline">
@@ -351,7 +321,39 @@
         </footer>
 
     </div>
-    <div layout="column" class="rightSide" ng-if="isBroker" flex>
+
+    <div class="right-stat" ng-if="!isBroker" ng-class="{collapsed:rightSideNavCollapsed}">
+        <img class="closeRightSideBar" src="/assets/images/hide-bar.png" ng-click="console.log('hey!');vm.showRightDrawer()">
+        <img class="bgimage" src="/assets/images/sidebar-background.png">
+        <div style="position:absolute;right:15px;left:10px;z-index: 2;">
+            <div><progress-display chart-id="brokerage-progress" is-vertical="true"/></div>
+             <div class="contact-brokerage">
+                <div style="position: relative;display: flex; flex-flow: column; margin-top: 15px;">
+                    <h2 style="color:white;">Brokerage Applications</h2>
+                    <input type="text" placeholder="Search" ng-model="vm.searchBrokerageApplications" type="search" ng-change="vm.changeBrokerageApplications()" > 
+                    <img src="/assets/images/search.png" alt="Search" style="position: absolute;right:2px;top:40px;">   
+                    <div style="display: flex;flex-flow: column;color:white;">
+                        <div style="display: flex;border: none;border-radius: 3px;padding: 20px;padding-left:0px;margin-bottom: 10px;" ng-repeat="item in vm.filteredContactedBrokers|limitTo:3">
+                            <img style="width: 70px; background:white; border-radius:3px;height:36px;margin-right: 15px; padding: 5px;" ng-src="/assets/images/partnerLogos/{{item.brokerageId}}.png" alt="">
+                            <div style="display: flex; flex-flow: column;">
+                                <div style="font-size: 14px;">{{item.brokerageId}}
+                                </div>
+                                <div  ng-if="item.status!='PENDING'" style="margin-top: 10px;font-size: 14px;line-height: 26px;background-color:#2ecc71;width: 90px;text-align: center;border-radius: 4px;">
+                                    {{item.status}}        
+                                </div>
+                                <div  ng-if="item.status=='PENDING'" class="confirm-btn" style="margin-top: 10px;font-size: 14px;line-height: 26px;background-color: #3498db;width: 90px;text-align: center;border-radius: 4px;">
+                                    {{item.status}}        
+                                </div>
+                            </div> 
+                            
+                        </div>
+                    </div>            
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div layout="column" class="rightSide" ng-if="isBroker" flex ng-class="{collapsed:rightSideNavCollapsed}">
         <img style="position: absolute;width:250px;height:100%; z-index: 1;" ng-src="{{vm.bgurl}}">
         <div style="z-index: 3;">
             <mini-calendar/>            
