--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -34,4 +34,9 @@
 		<img class="icon-active" src="/assets/images/help-active.png" alt="">
 		<span ng-if="!isIA">Help</span><span ng-if="isIA">Dashboard</span>
 	</a>
+	<a ng-click="signOut()">
+		<img class="icon" src="/assets/images/logout.png" alt="">
+		<img class="icon-active" src="/assets/images/logout.png" alt="">
+		Logout
+	</a>
 </div>
