--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -323,7 +323,7 @@
     </div>
 
     <div class="right-stat" ng-if="!isBroker" ng-class="{collapsed:rightSideNavCollapsed}">
-        <img class="closeRightSideBar" src="/assets/images/hide-bar.png" ng-click="console.log('hey!');vm.showRightDrawer()">
+        <img class="closeRightSideBar" src="/assets/images/hide-bar.png" ng-click="vm.showRightDrawer()">
         <img class="bgimage" src="/assets/images/sidebar-background.png">
         <div style="position:absolute;right:15px;left:10px;z-index: 2;">
             <div><progress-display chart-id="brokerage-progress" is-vertical="true"/></div>
@@ -354,7 +354,8 @@
     </div>
 
     <div layout="column" class="rightSide" ng-if="isBroker" flex ng-class="{collapsed:rightSideNavCollapsed}">
-        <img style="position: absolute;width:250px;height:100%; z-index: 1;" ng-src="{{vm.bgurl}}">
+        <img class="closeRightSideBar" src="/assets/images/hide-bar.png" ng-click="vm.showRightDrawer()">
+        <img style="position: absolute;width:250px;height:100%; z-index: 0;" ng-src="{{vm.bgurl}}">
         <div style="z-index: 3;">
             <mini-calendar/>            
         </div>
@@ -367,7 +368,7 @@
         </div>
         <div style="z-index: 3;">
             <!-- <img src="/assets/images/clip.png" style="position: absolute; right: 55px; height: 24px; margin-top: 16px;" /> -->
-            <img ng-click="vm.sendMessage()" src="/assets/images/open-message.png" style="position: absolute; right: -25px; height: 20px; margin-top: 18px; cursor: pointer; outline: none;" />
+            <img ng-click="vm.sendMessage()" src="/assets/images/open-message.png" class="sendMsgButton"/>
             <div ngf-drag-over-class="'dragover'" ngf-drop="vm.addAttachment($file)">
                 <input
                     type="text"
