--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -49,6 +49,14 @@
 	}
 }
 .meetingDetailsContent.mobile {display:none;}
+.sendMsgButton {
+	position: absolute;
+	right: -25px;
+	height: 20px;
+	margin-top: 18px;
+	cursor: pointer;
+	outline: none;
+}
 @media (max-width: 600px) {
 	.right-stat {
         display: block;
@@ -59,6 +67,20 @@
         .bgimage {
     		height:calc(100vh - 36px);
     	}
+    }
+    .sendMsgButton {
+        right: 20px;
+    }
+    .miniCalendar {
+    	margin-top: 20px;
+    }
+    .rightSide {
+    	display: flex;
+    	&.collapsed {
+    		display:none;
+    	}
+    	position: absolute;
+    	right: 0px;
     }
 
     .closeRightSideBar {
@@ -141,9 +163,6 @@
 	.mainArea md-step-body {
 	    max-height: calc(100vh - 140px);
 	    padding-bottom: 0px;
-	}
-	.rightSide {
-		display: none;
 	}
 	.dashClassAfterElementsChild {
 		/*max-width: 90%;*/
