--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -133,7 +133,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="right">
+	<div class="right" ng-class="{collapsed:rightSideNavCollapsed}">
 		<img style="position: absolute;width: 250px;min-width: 250px; height:100%; z-index: 0;" ng-src="{{vm.bgurl}}">
 		<div class="rightSide" style="max-height: 300px; z-index: 3;">
 			<mini-calendar style="z-index: 3;">
