upload icons some work pending; can't coz of 503 & 500s

--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -10,10 +10,24 @@
 	</div>
 	<div class="document-action" ng-if="!vm.document.documentID || vm.document.replaceAction" ngf-drag-over-class="'dragover'" ngf-drop="vm.upload($file, vm.document)">
 		<span ng-if="vm.isBroker" class="upload">Document not uploaded.</span>
-		<span ng-if="!vm.isBroker" class="upload">Drag and drop your file here or 
-		<md-button ng-if="!vm.isBroker" ngf-select="vm.upload($file, vm.document)" class="md-primary md-raised" style="background-color: #3598DB">	Upload
-		</md-button>
+		<span ng-if="!vm.isBroker" class="upload mo-hide">Drag and drop your file here or 
+			<md-button ngf-select="vm.upload($file, vm.document)" class="md-primary md-raised" style="background-color: #3598DB">	Upload
+			</md-button>
  		</span>
+ 		<span ng-if="!vm.isBroker" class="uploadIcons">
+			<div class="uploadIcon">
+				<img src="/assets/images/gdrive.png">
+			</div>
+			<div class="uploadIcon">
+				<img src="/assets/images/gdrive.png">
+			</div>
+			<div class="uploadIcon">
+				<img src="/assets/images/gdrive.png">
+			</div>
+			<div class="uploadIcon">
+				<img src="/assets/images/gdrive.png">
+			</div>
+		</span>
 	</div>
 	<div class="document-action" ng-if="vm.document.documentID && !vm.document.replaceAction">
 		<div class="view" ng-click="vm.preview(vm.document)">View</div>
