--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -111,6 +111,39 @@
 		padding: 30px;
 		position: relative;
 		height: calc(100vh - 120px);
+		img.attach {
+			height: 20px;
+		    cursor: pointer;
+		    position: relative;
+		    left: -26px;
+		    top: 16px;
+		}
+		img.compose-attach {
+			position: absolute;
+		    bottom: 10px;
+		    right: 140px;
+		    height: 20px;
+		    cursor: pointer;
+		}
+		.uploaded-message-attachment {
+			position: absolute;
+		    bottom: 95px;
+		    background: rgba(227,227,227,0.84);
+		    padding: 10px;
+		    border-radius: 3px;
+		    img {
+		    	position: absolute;
+			    right: -5px;
+			    top: -6px;
+			    height: 16px;
+			    padding: 2px;
+			    border: 1px solid;
+		    	background: rgba(227,227,227,0.84);
+			    border-radius: 100%;
+			    cursor: pointer;
+		    }
+		}
+
 		.compose-to {
 			visibility: hidden;
 		}
