fixed document responsiveness

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -323,7 +323,7 @@
     </div>
 
     <div class="right-stat" ng-if="!isBroker" ng-class="{collapsed:rightSideNavCollapsed}">
-        <img class="closeRightSideBar" src="/assets/images/hide-bar.png" ng-click="vm.showRightDrawer()">
+        <img class="closeRightSideBar" src="/assets/images/hide-bar-white.png" ng-click="vm.showRightDrawer()">
         <img class="bgimage" src="/assets/images/sidebar-background.png">
         <div style="position:absolute;right:15px;left:10px;z-index: 2;">
             <div><progress-display chart-id="brokerage-progress" is-vertical="true"/></div>
