--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -31,7 +31,7 @@
 			<img style="height: 35px;" src="/assets/images/logout.svg" alt="Logout">
 		</a>
 		<a class="mo-show" ng-click="vm.showRightDrawer()" ng-show="ifRightDrawer">
-			<img style="height: 35px;" src="/assets/images/logout.svg" alt="Logout">
+			<img style="height: 35px;" src="/assets/images/flipright.png" alt="Get Right Menu">
 		</a>
 	</div>
 </div>
