--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -12,7 +12,7 @@
 						<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">{{appointment.startTime | amParse:'DD/MM/YYYY hh:mm' | amDateFormat:'MMM YY'}}</div>
 						<div style="font-size: 12px; opacity: 0.3;padding: 3px;">{{appointment.startTime | amParse:'DD/MM/YYYY hh:mm' | amDateFormat:'hh:mm a'}}</div>
 					</div>
-					<img style="width:120px;padding-right: 20px;align-self: flex-start;padding-left: 20px;" ng-src="/assets/images/partnerLogos/{{appointment.brokerageName}}.png">
+					<img style="width:120px;padding-right: 20px;align-self: flex-start;padding-left: 20px;" ng-src="/assets/images/partnerLogos/{{appointment.brokerName}}.png">
 					<div class="detail">
 						<div style="font-size: 14px;margin-bottom: 3px;">{{appointment.brokerageName}}</div>
 						<div style="margin-bottom: 17px;opacity: 0.4;" class="message">{{appointment.meetingSubject}}</div>
