--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -33,9 +33,7 @@
 	min-width: 280px;
 */}
 .mainCalBrokerage {
-    -ms-flex: 1 1 70%;
-    flex: 1 1 70%;
-    max-width: 70%;
+	flex: 1;
     max-height: 100%;
     box-sizing: border-box;	
 }
