--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -603,10 +603,7 @@ md-step-body {
 	margin-left: -27px;
 	border: solid 1px #e7ecf1;
 	margin-bottom: 30px;
-	-webkit-flex: 1 1 10%;
-    -ms-flex: 1 1 10%;
-    flex: 1 1 10%;
-    max-width: 10%;
+    width: 300px;
     max-height: 100%;
     box-sizing: border-box;
 
