--- a/src/app/components/main/select-slot/selectslot.html
+++ b/src/app/components/main/select-slot/selectslot.html
@@ -26,7 +26,7 @@
         <div class="meetingDetails">
             <div class="meetingDetailsHeading">Meeting Details</div>
             <div class="meetingDetailsContent" layout="row" flex ng-repeat="slot in vm.selectedPartners[$index]['selectedAppointments']">
-                <div flex="10"><img src="../../../../assets/images/clockicon.png" width="24" /></div>
+                <div flex="10"><img src="../../../../assets/images/clockicon.png" width="24" style="max-width: 100%;" /></div>
                 <div flex="90" class="timings">Time slot - {{slot | date:'MMM dd, yyyy HH:mm a'}}</div>
             </div>
         </div>
