--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -2,6 +2,9 @@ md-step-body {
 	padding-bottom: 60px;
 }
 
+.partnerLogoSmall {
+	max-width:100%;
+}
 .mainHeader {
   font-family: Lato;
   font-size: 18px;
@@ -156,7 +159,7 @@ md-event-calendar {
 				&.left {
 				}
 				&.right {
-					margin-left: 40px;
+					margin-left: 85px;
 				} 
 			}
 		}
