--- a/src/app/components/main/calendar/calselect.html
+++ b/src/app/components/main/calendar/calselect.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="List dialog" class="calSelectDialog">
 	<md-dialog-content>
 	    <div style="position: fixed; right: 10px; top: 10px;" ng-click="closeDialog()"><img src="/assets/images/close-message.png" /></div>
-		<select-slot selected-partners="selectedPartners"/>
+		<select-slot selected-partners="selectedPartners" open-in-popup="timeslotSelected"/>
 	</md-dialog-actions>
 </md-dialog>'
